         poster texture.

WIP      Retroarch core MAME 2003 Plus allows to save the MAME XML file needed by AML.
         In this core, the XML is extracted using the MAME internal menu, which must be
         opened with the Retroarch core options menu. The XML file is saved in the SAVES
         directory with name mame2003-plus/mame2003-plus.xml
         TTBOMK, currently it is the only core to support this feature.
         Exploit this to give support to MAME 2003 and then Android. According to
         Chrisism, Retroarch is currently the best way to use MAME in Android.

         See https://github.com/libretro/mame2003-libretro/pull/348
         See https://github.com/libretro/mame2003-plus-libretro/pull/8
         See https://github.com/libretro/mame2010-libretro/pull/123
         See https://github.com/libretro/mame2010-libretro/tree/master/metadata

WIP      [CORE] Implement the "Read-only launchers". ROLs are XML files that include the
         launcher information as well as the ROMs information. ROLs are generated with AML,
         can be exported as XML and then used with AEL. AEL will trear ROLs are read-only
         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.

[B]Advanced MAME Launcher | version 0.9.12 | xx xxxxx 2020[/B]


[B]Advanced MAME Launcher | version 0.9.11 | 26 November 2019[/B]

FEATURE  [CORE] For Software Lists, instead of showing the number of ROMs show the number
         of Items in Flat display mode or Parents in Parent/Clone display mode.

FEATURE  [CORE] Support for MASH's Alltime.ini.

FEATURE  [CORE] Improvements in the JSON index of DAT files. Use dictionaries and not list
         to reduce JSON file size and speed up data access.

FEATURE  [CORE] Improved main statistics.

FEATURE  [CORE] Improve some Software List long names until they are fixed in MAME repository.
